添加部分页面wxss
目前还差3页

--- a/wxss/index/code2.wxml
+++ b/wxss/index/code2.wxml
@@ -1,8 +1,17 @@
 <!--index/code2.wxml-->
 <!--index/code2.wxml-->
 <scroll-view scroll-y class='body'>
-  <image class='code-bg' src='../images/code-bg.png'>
-    <image class='share' src='../images/share.png'></image>
+  <view class='code-bg'>
+    <image class='my-list-image' src='../images/pic.png'>
+      <view class='my-list-mask'></view>
+      <image class='share' src='../images/share.png'></image>
+       <image class='logo' src='../images/logo.png'></image>
+      <view class='image-left-bottom'></view>
+      <view class='image-right-bottom'></view>
+    </image>
+      <view class='code-con'>
+      <view class='font-left-top'></view>
+      <view class='font-right-top'></view>
     <view class='font code-font'>
       <view class='font-1'>王音：礼物</view>
       <view class='font-2'>2019.6.15-2019.9.1</view>
@@ -16,7 +25,8 @@
       <view class='code-font2'>待参观</view>
 
     </view>
-  </image>
+    </view>
+  </view>
 <view class='code-ps'>
 <view class='code-ps-topic'>注意事项</view>
 1、票务一经售出不退不换；
