--- a/wxss/index/code.wxss
+++ b/wxss/index/code.wxss
@@ -1,45 +1,46 @@
 /* index/code.wxss */
-@import "index.wxss";
+@import "my1.wxss";
 @import "window1.wxss";
 
 .code-bg {
-  position:relative;
-  width: 668rpx;
-  height: 1018rpx;
-  margin: 40rpx 41rpx;
+  width:600rpx;
+  height:950rpx;
+  margin:40rpx 75rpx;
+  position: relative;
+
 }
 .share{
   width:34rpx;
   height:34rpx;
   position: absolute;
-  top:110rpx;
-  right:80rpx;
+  top:90rpx;
+  right:50rpx;
 }
 .code-font{
   position: absolute;
-  top:250rpx;
+  top:50rpx;
   left:50rpx;
 }
 .ma{
   position:absolute;
   width:340rpx;
   height:340rpx;
-  left:160rpx;
-  top:430rpx;
+  left:130rpx;
+  top:230rpx;
 }
 .code-line{
   width:540rpx;
   height:2rpx;
   background: rgba(0,0,0,.1);
   position: absolute;
-  left:64rpx;
-  bottom:184rpx;
+  left:30rpx;
+  bottom:135rpx;
 }
 .code-font1{
   position:absolute;
-  left:69rpx;
-  right:69rpx;
-  bottom:80rpx;
+  left:40rpx;
+  right:40rpx;
+  bottom:30rpx;
   height:76rpx;
   width:520rpx;
 }
@@ -62,7 +63,6 @@
   right:38rpx;
 }
 .code-ps{
-  margin-top:-50rpx;
   opacity: .6;
   font-size:24rpx;
   line-height: 33rpx;
@@ -91,4 +91,42 @@
 }
 .code-bottom-div1{
   border:none;
+}
+.my-list-image{
+  position: relative;
+  float:left;
+  width:600rpx;
+  height:200rpx;
+  top:0rpx;
+  left:0rpx;
+}
+.my-list-mask{
+  width:600rpx;
+  height:200rpx;
+}
+.image-left-bottom {
+  left: -1rpx;
+  bottom: -1rpx;
+  border-radius: 0 20rpx 0 0;
+}
+
+.image-right-bottom {
+  right: -1rpx;
+  bottom: -1rpx;
+  border-radius: 20rpx 0 0 0;
+}
+.code-con{
+  float:left;
+  position: relative;
+  width:600rpx;
+  height:750rpx;
+  background: #fff;
+  box-shadow: 0rpx 0rpx 5rpx rgba(0,0,0,.1);
+}
+.logo{
+  width:80rpx;
+  height:80rpx;
+  position: absolute;
+  top:60rpx;
+  left:50rpx;
 }
