--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -3,7 +3,7 @@ page {
   padding: 0;
   box-sizing: border-box !important;
   height: 100%;
-  background-color: #fcfcfc;
+  background-color: #f8f8f8;
 }
 
 view,
